--- a/vsvim/.vsvimrc
+++ b/vsvim/.vsvimrc
@@ -9,6 +9,15 @@ nnoremap <LEADER>L :vsc Resharper.ReSharper_LocateInSolutionOrAssemblyExplorer<E
 nnoremap <LEADER>k :vsc Edit.ParameterInfo<ENTER>
 nnoremap <LEADER><SPACE> :noh<ENTER>
 
+nnoremap <LEADER>v :vsplit<ENTER>
+nnoremap <LEADER>s :split<ENTER>
+nnoremap <LEADER>h <C-w>h
+nnoremap <LEADER>l <C-w>l
+nnoremap <LEADER>j <C-w>j
+nnoremap <LEADER>k <C-w>k
+nnoremap H gT
+nnoremap L gt
+
 nnoremap <LEADER>w :vsc Edit.NextSubWord<ENTER>
 nnoremap <LEADER>b :vsc Edit.PreviousSubWord<ENTER>
 nnoremap <LEADER>vw :vsc Edit.SelectCurrentSubWord<ENTER>
