--- a/vsvim/.vsvimrc
+++ b/vsvim/.vsvimrc
@@ -1,10 +1,12 @@
 set clipboard=unnamed
 set ignorecase
 set hlsearch
+set incsearch
 let mapleader = " "
 
 inoremap jk <ESC>
 nnoremap K :vsc Edit.QuickInfo<ENTER>
+nnoremap <LEADER>f :vsc ReSharper.ReSharper_GotoType<ENTER>
 nnoremap <LEADER>L :vsc Resharper.ReSharper_LocateInSolutionOrAssemblyExplorer<ENTER>
 nnoremap <LEADER>k :vsc Edit.ParameterInfo<ENTER>
 nnoremap <LEADER><SPACE> :noh<ENTER>
